[tool.poetry]
name = "autochem"
version = "2024.6.5"
description = "A library for manipulating molecular descriptors"
authors = ["Andreas Copan <avcopan@gmail.com>"]
readme = "README.md"
packages = [
    { include = "automol" },
    { include = "autoreact" },
    { include = "molsym" },
    { include = "phydat" },
]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.24.0"
ipywidgets = "^8.1.2"
jupyter = "^1.0.0"
more-itertools = "^10.2.0"
networkx = "^3.3"
numpy = "^1.26.4"
py3dmol = "^2.1.0"
pylint = "^3.2.2"
pyparsing = "^3.1.2"
pytest = "^8.2.1"
pyyaml = "^6.0.1"
qcelemental = "^0.27.1"
rdkit = "^2023.9.6"
scipy = "^1.13.0"
xarray = "^2024.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# tools
[tool.black]
target-version = ["py310", "py311", "py312"]

[tool.ruff]
target-version = "py311"
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
    "N806", # Variable in function should be lowercase
]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
follow_imports = "skip"
ignore_errors = true
