[project]
name = "autochem"
version = "2024.7.17"
description = "A library for manipulating molecular descriptors "
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
requires-python = ">= 3.10"
dependencies = [
    "ipython",
    "ipywidgets",
    "jupyter",
    "more-itertools",
    "networkx",
    "numpy<2.0",
    "py3dmol",
    "pylint",
    "pyparsing",
    "pytest",
    "pyyaml",
    "qcelemental",
    "rdkit",
    "scipy",
    "xarray",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["automol*", "autoreact*", "molsym*", "phydat*"]
namespaces = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# tools
[tool.black]
target-version = ["py310", "py311", "py312"]

[tool.ruff]
target-version = "py311"
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
    "N806", # Variable in function should be lowercase
    "C901", # Too complex
]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
follow_imports = "skip"
ignore_errors = true
